--- a/dangerzone/flask_rum/rum_templates/rum/banana/front_middle.html
+++ b/dangerzone/flask_rum/rum_templates/rum/banana/front_middle.html
@@ -1,3 +1,4 @@
+{% block banana_benefits %}
 <section id="the-benefits">
         <div class="row">
           <div class="large-12 columns">
@@ -26,6 +27,9 @@
           </div>
         </div>
   </section>
+{% endblock %}
+
+{% block banana_proof %}
   <section id="the-proof">
         <div class="row">
           <div class="large-12">
@@ -41,6 +45,9 @@
           </ul>
         </div>
   </section>
+{% endblock %}
+
+{% block banana_action %}
   <section id="the-call-to-action">
         <div class="row">
           <div class="large-12 columns">
@@ -61,3 +68,4 @@
           </div>
         </div>
   </section>
+{% endblock %}
