--- a/dangerzone/flask_rum/rum_templates/rum/banana/hero.html
+++ b/dangerzone/flask_rum/rum_templates/rum/banana/hero.html
@@ -1,7 +1,7 @@
  <section id="hero">
         <div class="row">
           <div class="medium-12 columns">
-              <h2>Unique Selling Proposition Main Headline</h2>
+              <h2>DangerZone</h2>
           </div>
         </div>
         <div class="row">
